--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				
 			</div>
 		</div>
-		<div class="row cake-cover">
+		<div class="row ">
 			<div class="col-md-12 texr-center">
 				
 				<div class="cake" id="cakeContainer" style="display: none;">
